// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle click 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw goGrTz"
    data-testid="Card"
  >
    Test
    <div
      class="absolute top-0 right-0 flex items-center m-2 space-x-2"
    />
  </div>
</DocumentFragment>
`;

exports[`Card should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw ikHNGi"
    data-testid="Card"
  >
    <div
      class="absolute top-0 right-0 flex items-center m-2 space-x-2"
    />
  </div>
</DocumentFragment>
`;
